# Ray-Tracer-from-scratch

./: .gitignore  CMakeLists.txt  README.md  framerate.txt  frametime.txt  main.cpp  scene.cpp  scene.h  vec.cpp  vec.h  vec2.cpp  vec2.h
